--- a/locales/nl.json
+++ b/locales/nl.json
@@ -8,8 +8,8 @@
 		"textnumber_info": "<A HREF='https://github.com/bvdbos/com.sasteren.vodcast'>heel veel</A>",
 		"replace_items": "vodcast-urls",
 		"replace_add_button": "Toevoegen",		
-		"podcast_url": "vodcast url",
-		"podcast_name": "vodcast titel",
+		"vodcast_url": "vodcast url",
+		"vodcast_name": "vodcast titel",
 		"textnumber_checkbox": "doet nog niets"
 	}
 }
