--- a/locales/en.json
+++ b/locales/en.json
@@ -9,7 +9,7 @@
 		"replace_items": "vodcast-urls",
 		"replace_add_button": "add vodcast",
 		"vodcast_url": "vodcast url",
-		"vodcast_name": "vodcast titel",
+		"vodcast_name": "vodcast title",
 		"textnumber_checkbox": "does nothing yet"
 	}
 }
